@@ -1,5 +1,8 @@
 Release Notes
 
+* 1/26/2016
+  * added protection not to change failed jobs to holding
+
 * 1/25/2016
   * sending objStoreIDs for ES merge
   * added network configurator and corepower collection
